--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <div class="header-nav">
               <nav>
                 <ul>
-                  <li><a href="/#">Услуги</a></li>
-                  <li><a href="/#">Виджеты</a></li>
-                  <li><a href="/#">Интеграции</a></li>
-                  <li><a href="/#">Кейсы</a></li>
-                  <li><a href="/#" class="display-none">Сертификаты</a></li>
+                  <li><a href="#">Услуги</a></li>
+                  <li><a href="#">Виджеты</a></li>
+                  <li><a href="#">Интеграции</a></li>
+                  <li><a href="#">Кейсы</a></li>
+                  <li><a href="#" class="display-none">Сертификаты</a></li>
                 </ul>
               </nav>
             </div>
             <div class="header-contact">
               <a href="tel:+75555555555">+7 555 555-55-55</a>
               <div class="social-media-wrapper">
-                <a href="/#" id="telegram"></a>
-                <a href="/#" id="viber"></a>
-                <a href="/#" id="whatsapp"></a>
+                <a href="#" id="telegram"></a>
+                <a href="#" id="viber"></a>
+                <a href="#" id="whatsapp"></a>
               </div>
             </div>
           </div>
@@ -84,40 +84,40 @@
         <div class="footer-wrapper">
           <div class="footer-about_company">
             <h3 class="footer-headings">О компании</h3>
-            <a href="/#" class="footer-links">Партнёрская программа</a>
-            <a href="/#" class="footer-links">Вакансии</a>
+            <a href="#" class="footer-links">Партнёрская программа</a>
+            <a href="#" class="footer-links">Вакансии</a>
           </div>
           <div class="footer-menu">
             <div class="footer-menu-left_block">
               <h3 class="footer-headings">Меню</h3>
-              <a href="/#" class="footer-links">Расчёт стоимости</a>
-              <a href="/#" class="footer-links">Услуги</a>
-              <a href="/#" class="footer-links">Виджеты</a>
-              <a href="/#" class="footer-links">Интеграции</a>
-              <a href="/#" class="footer-links">Наши клиенты</a>
+              <a href="#" class="footer-links">Расчёт стоимости</a>
+              <a href="#" class="footer-links">Услуги</a>
+              <a href="#" class="footer-links">Виджеты</a>
+              <a href="#" class="footer-links">Интеграции</a>
+              <a href="#" class="footer-links">Наши клиенты</a>
             </div>
             <div class="footer-menu-right_block">
-              <a href="/#" class="footer-links display-none">Кейсы</a>
-              <a href="/#" class="footer-links mobile-block">Благодарность клиентов</a>
-              <a href="/#" class="footer-links display-none">Благодарственные письма</a>
-              <a href="/#" class="footer-links mobile-block">Кейсы</a>
-              <a href="/#" class="footer-links">Сертификаты</a>
-              <a href="/#" class="footer-links">Блог на Youtube</a>
-              <a href="/#" class="footer-links">Вопрос / Ответ</a>
+              <a href="#" class="footer-links display-none">Кейсы</a>
+              <a href="#" class="footer-links mobile-block">Благодарность клиентов</a>
+              <a href="#" class="footer-links display-none">Благодарственные письма</a>
+              <a href="#" class="footer-links mobile-block">Кейсы</a>
+              <a href="#" class="footer-links">Сертификаты</a>
+              <a href="#" class="footer-links">Блог на Youtube</a>
+              <a href="#" class="footer-links">Вопрос / Ответ</a>
             </div>
           </div>
           <div class="footer-contacts">
             <h3 class="footer-headings">Контакты</h3>
             <a href="tel:+75555555555">+7 555 555-55-55</a>
             <div class="social-media-wrapper footer-social-media-wrapper">
-              <a href="/#" id="telegram"></a>
-              <a href="/#" id="viber"></a>
-              <a href="/#" id="whatsapp"></a>
+              <a href="#" id="telegram"></a>
+              <a href="#" id="viber"></a>
+              <a href="#" id="whatsapp"></a>
             </div>
-            <a href="/#" class="footer-links footer-address">Москва, Путевой проезд 3с1, к 902</a>
+            <a href="#" class="footer-links footer-address">Москва, Путевой проезд 3с1, к 902</a>
             <div class="footer-privacy_policy">
               <h5>©WELBEX 2022. Все права защищены.</h5>
-              <a href="">Политика конфиденциальности</a>
+              <a href="#">Политика конфиденциальности</a>
             </div>
           </div> 
         </div>
